Bug #54579. Fix content overflow in user message at action card.
Fix paddings on user tables and messsages at action's card body.

(cherry picked from commit 4fc3276ea67f866a9f0b9ca1de15c9d46f638f38)

--- a/FrontEnd/Sailfish-JS-report/src/styles/action.scss
+++ b/FrontEnd/Sailfish-JS-report/src/styles/action.scss
@@ -33,7 +33,6 @@
 
     &__custom-msg {
         color: $primaryTextColor;
-        padding-left: 10px;
 
         &.debug {
             color: gray;
@@ -166,16 +165,22 @@
         overflow-x: scroll;
     }
 
-    &__input-params {
-        padding-left: 10px;
+    &__item {
+        padding: 3px 7px;
+    }
 
+    &__item-title {
+        font-weight: bold;
+        font-size: 18px;
+    }
+
+    &__input-params {
         &.transparent {
             opacity: 0.3;
         }
     }
 
     &__table {
-        padding-left: 10px;
     }
 
     &__verification {
